--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -20,6 +20,7 @@ dependencies:
   image_picker: ^0.8.7+3
   permission_handler_platform_interface: ^3.9.0
   permission_handler: ^10.2.0
+  provider: ^6.0.5
 
 dev_dependencies:
   flutter_test:
